LinqToQuerystring.Javascript/output/LinqToQuerystringParser.js
// $ANTLR 3.1.1 D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g 2013-08-01 14:24:35

var LinqToQuerystringParser = function(input, state) {
    if (!state) {
        state = new org.antlr.runtime.RecognizerSharedState();
    }

    (function(){
    }).call(this);

    LinqToQuerystringParser.superclass.constructor.call(this, input, state);


         

    /* @todo only create adaptor if output=AST */
    this.adaptor = new org.antlr.runtime.tree.CommonTreeAdaptor();

};

org.antlr.lang.augmentObject(LinqToQuerystringParser, {
    OCTAL_ESC: 54,
    MAX: 27,
    EQUALS: 18,
    COUNT: 26,
    ORDERBY: 36,
    NOT: 17,
    INLINECOUNT: 11,
    AND: 16,
    SUM: 29,
    EXPAND: 10,
    T__60: 60,
    EOF: -1,
    SPACE: 14,
    T__55: 55,
    T__56: 56,
    ENDSWITH: 33,
    T__57: 57,
    T__58: 58,
    ESC_SEQ: 52,
    IDENTIFIER: 31,
    T__59: 59,
    ALL: 25,
    LESSTHANOREQUAL: 23,
    DOUBLE: 44,
    SELECT: 9,
    GREATERTHANOREQUAL: 21,
    HEX_PAIR: 49,
    GREATERTHAN: 20,
    BYTE: 46,
    LESSTHAN: 22,
    GUID: 45,
    SUBSTRINGOF: 34,
    ASC: 37,
    DATETIME: 41,
    UNICODE_ESC: 53,
    BOOL: 39,
    HEX_DIGIT: 51,
    NOTEQUALS: 19,
    INT: 6,
    MIN: 28,
    DYNAMICIDENTIFIER: 47,
    SKIP: 5,
    ANY: 24,
    TOLOWER: 35,
    NEWLINE: 50,
    SINGLE: 43,
    ALLPAGES: 12,
    NONE: 13,
    AVERAGE: 30,
    OR: 15,
    STARTSWITH: 32,
    ASSIGN: 48,
    FILTER: 8,
    ALIAS: 4,
    DESC: 38,
    LONG: 42,
    TOP: 7,
    STRING: 40
});

(function(){
// public class variables
var OCTAL_ESC= 54,
    MAX= 27,
    EQUALS= 18,
    COUNT= 26,
    ORDERBY= 36,
    NOT= 17,
    INLINECOUNT= 11,
    AND= 16,
    SUM= 29,
    EXPAND= 10,
    T__60= 60,
    EOF= -1,
    SPACE= 14,
    T__55= 55,
    T__56= 56,
    ENDSWITH= 33,
    T__57= 57,
    T__58= 58,
    ESC_SEQ= 52,
    IDENTIFIER= 31,
    T__59= 59,
    ALL= 25,
    LESSTHANOREQUAL= 23,
    DOUBLE= 44,
    SELECT= 9,
    GREATERTHANOREQUAL= 21,
    HEX_PAIR= 49,
    GREATERTHAN= 20,
    BYTE= 46,
    LESSTHAN= 22,
    GUID= 45,
    SUBSTRINGOF= 34,
    ASC= 37,
    DATETIME= 41,
    UNICODE_ESC= 53,
    BOOL= 39,
    HEX_DIGIT= 51,
    NOTEQUALS= 19,
    INT= 6,
    MIN= 28,
    DYNAMICIDENTIFIER= 47,
    SKIP= 5,
    ANY= 24,
    TOLOWER= 35,
    NEWLINE= 50,
    SINGLE= 43,
    ALLPAGES= 12,
    NONE= 13,
    AVERAGE= 30,
    OR= 15,
    STARTSWITH= 32,
    ASSIGN= 48,
    FILTER= 8,
    ALIAS= 4,
    DESC= 38,
    LONG= 42,
    TOP= 7,
    STRING= 40;

// public instance methods/vars
org.antlr.lang.extend(LinqToQuerystringParser, org.antlr.runtime.Parser, {
        
    setTreeAdaptor: function(adaptor) {
        this.adaptor = adaptor;
    },
    getTreeAdaptor: function() {
        return this.adaptor;
    },

    getTokenNames: function() { return LinqToQuerystringParser.tokenNames; },
    getGrammarFileName: function() { return "D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g"; }
});
org.antlr.lang.augmentObject(LinqToQuerystringParser.prototype, {

    // inline static return class
    prog_return: (function() {
        LinqToQuerystringParser.prog_return = function(){};
        org.antlr.lang.extend(LinqToQuerystringParser.prog_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:13:8: public prog : ( param ( '&' param )* )* ;
    // $ANTLR start "prog"
    prog: function() {
        var retval = new LinqToQuerystringParser.prog_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var char_literal2 = null;
         var param1 = null;
         var param3 = null;

        var char_literal2_tree=null;

        try {
            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:14:2: ( ( param ( '&' param )* )* )
            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:14:4: ( param ( '&' param )* )*
            root_0 = this.adaptor.nil();

            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:14:4: ( param ( '&' param )* )*
            loop2:
            do {
                var alt2=2;
                var LA2_0 = this.input.LA(1);

                if ( (LA2_0==SKIP||(LA2_0>=TOP && LA2_0<=INLINECOUNT)||LA2_0==ORDERBY) ) {
                    alt2=1;
                }


                switch (alt2) {
                case 1 :
                    // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:14:5: param ( '&' param )*
                    this.pushFollow(LinqToQuerystringParser.FOLLOW_param_in_prog40);
                    param1=this.param();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, param1.getTree());
                    // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:14:11: ( '&' param )*
                    loop1:
                    do {
                        var alt1=2;
                        var LA1_0 = this.input.LA(1);

                        if ( (LA1_0==55) ) {
                            alt1=1;
                        }


                        switch (alt1) {
                        case 1 :
                            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:14:12: '&' param
                            char_literal2=this.match(this.input,55,LinqToQuerystringParser.FOLLOW_55_in_prog43); 
                            this.pushFollow(LinqToQuerystringParser.FOLLOW_param_in_prog46);
                            param3=this.param();

                            this.state._fsp--;

                            this.adaptor.addChild(root_0, param3.getTree());


                            break;

                        default :
                            break loop1;
                        }
                    } while (true);



                    break;

                default :
                    break loop2;
                }
            } while (true);




            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    param_return: (function() {
        LinqToQuerystringParser.param_return = function(){};
        org.antlr.lang.extend(LinqToQuerystringParser.param_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:16:1: param : ( orderby | top | skip | filter | select | inlinecount | expand ) ;
    // $ANTLR start "param"
    param: function() {
        var retval = new LinqToQuerystringParser.param_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

         var orderby4 = null;
         var top5 = null;
         var skip6 = null;
         var filter7 = null;
         var select8 = null;
         var inlinecount9 = null;
         var expand10 = null;


        try {
            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:16:7: ( ( orderby | top | skip | filter | select | inlinecount | expand ) )
            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:16:9: ( orderby | top | skip | filter | select | inlinecount | expand )
            root_0 = this.adaptor.nil();

            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:16:9: ( orderby | top | skip | filter | select | inlinecount | expand )
            var alt3=7;
            switch ( this.input.LA(1) ) {
            case ORDERBY:
                alt3=1;
                break;
            case TOP:
                alt3=2;
                break;
            case SKIP:
                alt3=3;
                break;
            case FILTER:
                alt3=4;
                break;
            case SELECT:
                alt3=5;
                break;
            case INLINECOUNT:
                alt3=6;
                break;
            case EXPAND:
                alt3=7;
                break;
            default:
                var nvae =
                    new org.antlr.runtime.NoViableAltException("", 3, 0, this.input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:16:10: orderby
                    this.pushFollow(LinqToQuerystringParser.FOLLOW_orderby_in_param59);
                    orderby4=this.orderby();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, orderby4.getTree());


                    break;
                case 2 :
                    // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:16:20: top
                    this.pushFollow(LinqToQuerystringParser.FOLLOW_top_in_param63);
                    top5=this.top();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, top5.getTree());


                    break;
                case 3 :
                    // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:16:26: skip
                    this.pushFollow(LinqToQuerystringParser.FOLLOW_skip_in_param67);
                    skip6=this.skip();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, skip6.getTree());


                    break;
                case 4 :
                    // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:16:33: filter
                    this.pushFollow(LinqToQuerystringParser.FOLLOW_filter_in_param71);
                    filter7=this.filter();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, filter7.getTree());


                    break;
                case 5 :
                    // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:16:42: select
                    this.pushFollow(LinqToQuerystringParser.FOLLOW_select_in_param75);
                    select8=this.select();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, select8.getTree());


                    break;
                case 6 :
                    // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:16:51: inlinecount
                    this.pushFollow(LinqToQuerystringParser.FOLLOW_inlinecount_in_param79);
                    inlinecount9=this.inlinecount();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, inlinecount9.getTree());


                    break;
                case 7 :
                    // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:16:65: expand
                    this.pushFollow(LinqToQuerystringParser.FOLLOW_expand_in_param83);
                    expand10=this.expand();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, expand10.getTree());


                    break;

            }




            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    skip_return: (function() {
        LinqToQuerystringParser.skip_return = function(){};
        org.antlr.lang.extend(LinqToQuerystringParser.skip_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:18:1: skip : SKIP (int= INT )+ -> ^( SKIP INT[int] ) ;
    // $ANTLR start "skip"
    skip: function() {
        var retval = new LinqToQuerystringParser.skip_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var int = null;
        var SKIP11 = null;

        var int_tree=null;
        var SKIP11_tree=null;
        var stream_INT=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token INT");
        var stream_SKIP=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token SKIP");

        try {
            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:19:2: ( SKIP (int= INT )+ -> ^( SKIP INT[int] ) )
            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:19:4: SKIP (int= INT )+
            SKIP11=this.match(this.input,SKIP,LinqToQuerystringParser.FOLLOW_SKIP_in_skip94);  
            stream_SKIP.add(SKIP11);

            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:19:12: (int= INT )+
            var cnt4=0;
            loop4:
            do {
                var alt4=2;
                var LA4_0 = this.input.LA(1);

                if ( (LA4_0==INT) ) {
                    alt4=1;
                }


                switch (alt4) {
                case 1 :
                    // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:19:12: int= INT
                    int=this.match(this.input,INT,LinqToQuerystringParser.FOLLOW_INT_in_skip98);  
                    stream_INT.add(int);



                    break;

                default :
                    if ( cnt4 >= 1 ) {
                        break loop4;
                    }
                        var eee = new org.antlr.runtime.EarlyExitException(4, this.input);
                        throw eee;
                }
                cnt4++;
            } while (true);



            // AST REWRITE
            // elements: INT, SKIP
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = this.adaptor.nil();
            // 19:18: -> ^( SKIP INT[int] )
            {
                // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:19:21: ^( SKIP INT[int] )
                {
                var root_1 = this.adaptor.nil();
                root_1 = this.adaptor.becomeRoot(stream_SKIP.nextNode(), root_1);

                this.adaptor.addChild(root_1, this.adaptor.create(INT, int));

                this.adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;


            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    top_return: (function() {
        LinqToQuerystringParser.top_return = function(){};
        org.antlr.lang.extend(LinqToQuerystringParser.top_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:21:1: top : TOP (int= INT )+ -> ^( TOP INT[int] ) ;
    // $ANTLR start "top"
    top: function() {
        var retval = new LinqToQuerystringParser.top_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var int = null;
        var TOP12 = null;

        var int_tree=null;
        var TOP12_tree=null;
        var stream_INT=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token INT");
        var stream_TOP=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token TOP");

        try {
            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:22:2: ( TOP (int= INT )+ -> ^( TOP INT[int] ) )
            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:22:4: TOP (int= INT )+
            TOP12=this.match(this.input,TOP,LinqToQuerystringParser.FOLLOW_TOP_in_top118);  
            stream_TOP.add(TOP12);

            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:22:11: (int= INT )+
            var cnt5=0;
            loop5:
            do {
                var alt5=2;
                var LA5_0 = this.input.LA(1);

                if ( (LA5_0==INT) ) {
                    alt5=1;
                }


                switch (alt5) {
                case 1 :
                    // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:22:11: int= INT
                    int=this.match(this.input,INT,LinqToQuerystringParser.FOLLOW_INT_in_top122);  
                    stream_INT.add(int);



                    break;

                default :
                    if ( cnt5 >= 1 ) {
                        break loop5;
                    }
                        var eee = new org.antlr.runtime.EarlyExitException(5, this.input);
                        throw eee;
                }
                cnt5++;
            } while (true);



            // AST REWRITE
            // elements: TOP, INT
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = this.adaptor.nil();
            // 22:17: -> ^( TOP INT[int] )
            {
                // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:22:20: ^( TOP INT[int] )
                {
                var root_1 = this.adaptor.nil();
                root_1 = this.adaptor.becomeRoot(stream_TOP.nextNode(), root_1);

                this.adaptor.addChild(root_1, this.adaptor.create(INT, int));

                this.adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;


            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    filter_return: (function() {
        LinqToQuerystringParser.filter_return = function(){};
        org.antlr.lang.extend(LinqToQuerystringParser.filter_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:24:1: filter : FILTER filterexpression[false] ;
    // $ANTLR start "filter"
    filter: function() {
        var retval = new LinqToQuerystringParser.filter_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var FILTER13 = null;
         var filterexpression14 = null;

        var FILTER13_tree=null;

        try {
            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:25:2: ( FILTER filterexpression[false] )
            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:25:4: FILTER filterexpression[false]
            root_0 = this.adaptor.nil();

            FILTER13=this.match(this.input,FILTER,LinqToQuerystringParser.FOLLOW_FILTER_in_filter142); 
            FILTER13_tree = this.adaptor.create(FILTER13);
            root_0 = this.adaptor.becomeRoot(FILTER13_tree, root_0);

            this.pushFollow(LinqToQuerystringParser.FOLLOW_filterexpression_in_filter145);
            filterexpression14=this.filterexpression(false);

            this.state._fsp--;

            this.adaptor.addChild(root_0, filterexpression14.getTree());



            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    select_return: (function() {
        LinqToQuerystringParser.select_return = function(){};
        org.antlr.lang.extend(LinqToQuerystringParser.select_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:27:1: select : SELECT propertyname[false] ( ',' propertyname[false] )* ;
    // $ANTLR start "select"
    select: function() {
        var retval = new LinqToQuerystringParser.select_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var SELECT15 = null;
        var char_literal17 = null;
         var propertyname16 = null;
         var propertyname18 = null;

        var SELECT15_tree=null;
        var char_literal17_tree=null;

        try {
            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:28:2: ( SELECT propertyname[false] ( ',' propertyname[false] )* )
            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:28:4: SELECT propertyname[false] ( ',' propertyname[false] )*
            root_0 = this.adaptor.nil();

            SELECT15=this.match(this.input,SELECT,LinqToQuerystringParser.FOLLOW_SELECT_in_select156); 
            SELECT15_tree = this.adaptor.create(SELECT15);
            root_0 = this.adaptor.becomeRoot(SELECT15_tree, root_0);

            this.pushFollow(LinqToQuerystringParser.FOLLOW_propertyname_in_select159);
            propertyname16=this.propertyname(false);

            this.state._fsp--;

            this.adaptor.addChild(root_0, propertyname16.getTree());
            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:28:32: ( ',' propertyname[false] )*
            loop6:
            do {
                var alt6=2;
                var LA6_0 = this.input.LA(1);

                if ( (LA6_0==56) ) {
                    alt6=1;
                }


                switch (alt6) {
                case 1 :
                    // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:28:33: ',' propertyname[false]
                    char_literal17=this.match(this.input,56,LinqToQuerystringParser.FOLLOW_56_in_select163); 
                    this.pushFollow(LinqToQuerystringParser.FOLLOW_propertyname_in_select166);
                    propertyname18=this.propertyname(false);

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, propertyname18.getTree());


                    break;

                default :
                    break loop6;
                }
            } while (true);




            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    expand_return: (function() {
        LinqToQuerystringParser.expand_return = function(){};
        org.antlr.lang.extend(LinqToQuerystringParser.expand_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:30:1: expand : EXPAND propertyname[false] ( ',' propertyname[false] )* ;
    // $ANTLR start "expand"
    expand: function() {
        var retval = new LinqToQuerystringParser.expand_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var EXPAND19 = null;
        var char_literal21 = null;
         var propertyname20 = null;
         var propertyname22 = null;

        var EXPAND19_tree=null;
        var char_literal21_tree=null;

        try {
            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:31:2: ( EXPAND propertyname[false] ( ',' propertyname[false] )* )
            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:31:4: EXPAND propertyname[false] ( ',' propertyname[false] )*
            root_0 = this.adaptor.nil();

            EXPAND19=this.match(this.input,EXPAND,LinqToQuerystringParser.FOLLOW_EXPAND_in_expand181); 
            EXPAND19_tree = this.adaptor.create(EXPAND19);
            root_0 = this.adaptor.becomeRoot(EXPAND19_tree, root_0);

            this.pushFollow(LinqToQuerystringParser.FOLLOW_propertyname_in_expand184);
            propertyname20=this.propertyname(false);

            this.state._fsp--;

            this.adaptor.addChild(root_0, propertyname20.getTree());
            // D:\\Code\\LinqToQuerystring\\LinqToQuerystring.Javascript\\LinqToQuerystring.g:31:32: ( ',' propertyname[false] )*
            loop7:
            do {
                var alt7=2;
                var LA7_0 = this.input.LA(1);

                if ( (LA7_0==56) ) {
                    alt7=1;
                }

